# CT-ITMO-y2021

./: README.md
firsrt term/algo-labs/lab-1/: A (Простая Сортировка).java  B (Сортировка подсчетом).java  C (Колличество инверсий).py  D (Печать вслепую).py  E (Хип ли).java  F (Хипуй!).java  G (Префиксные суммы).py  H (Скобки).java  I (Сортировка вагонов).py  J (Обход файлов).java  K (Минимум в очереди).py  L (Быстрый поиск в массиве).java  M (Приближенный двоичный поиск).py  N (Очень легкая задача).py  O (Квадратный корень и квадратный квадрат).py  P (K-best).cpp  Q (Разделение массива).py
firsrt term/algo-labs/lab-2/: A (Кузнечик).py  B (Кузнечик собирает монеты).java  C (Последовательность из 0 и 1).py  D (Черепаха и монеты).py  E (Числа фиксированной суммы).java  F (Лошадью ходи).py  G (Лошадью ходи - 2).py  H (Расстояние по Левенштейну).py  I (Кафе).java  J (Строй штурмовиков).py  K (Наибольшая возрастающая подпоследовательность).py  L (Большая наибольшая возрастающая подпоследовательность).py  M (Задача о рюкзаке. Точный вес. Без ответа).py  N (Задача о рюкзаке. Наибольший вес. С ответом).py  O (Задача о рюкзаке).py
firsrt term/algo-labs/lab-3/: A (Парковка).py  B (Подсчет опыта).txt  C (Реструктуризация компании).py  F (Массовая проверка простоты).py  H (Разложение на множители).py  I (Массовое разложение на множители).py  J (МегаНОД).py  K (НОД подмножества).py  L (НОК и НОД).py
firsrt term/computer architecture/: ternary_logic.v
secnod term/dm-labs/: B.py  F.py  G.py
second term/C and C++ skkv course/Lab_2 (PNG to PNM decoding)/: CMakeLists.txt
(+199 files in other folders)
